--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
 <h1>Nikhilchowdary Bonthu</h1>
-</body>
-</html>
+<h6>Foodcourt, vijayawada</h6>
+<p1>Vijayawada foodcourt is the famous for all types <b>junkfood</b> and <b>forigenfood</b>.In that foodcourt we can find all types of famous foods around the world, in the foodcourt sourndings we can find a lot of foodstalls and various types of shops.</p1>
+
