--- a/index.html
+++ b/index.html
@@ -10,3 +10,10 @@
 <h6>Foodcourt, vijayawada</h6>
 <p1>Vijayawada foodcourt is the famous for all types <b>junkfood</b> and <b>forigenfood</b>.In that foodcourt we can find all types of famous foods around the world, in the foodcourt sourndings we can find a lot of foodstalls and various types of shops.</p1>
 
+<hr>
+<h2>Travel</h2>
+<ol>
+  <li> Ganavaram airport is the nearest airport to the foodcourt</li>  
+  <li> From airport exactely five kilometers towards to right direction then take left and go through towards north direction then we seen a foodcourt  </li>
+</ol>
+
