--- a/aboutme.html
+++ b/aboutme.html
@@ -8,4 +8,4 @@
 <p> i am very lazy person</p>
 <h2> Bahuballi </h2>
 <p> Bahuballi movie is the ancient movie which describes about culture and tradition of the nation </p>
-<img src="prabas.jpg" alt="Bahubali-The Conclusion">
+<a href="prabas.jpg">"Image link">
