--- a/index.html
+++ b/index.html
@@ -14,6 +14,43 @@
 <h2>Travel</h2>
 <ol>
   <li> Ganavaram airport is the nearest airport to the foodcourt</li>  
-  <li> From airport exactely five kilometers towards to right direction then take left and go through towards north direction then we seen a foodcourt  </li>
+  <ol>
+  <li> from airport we can go out using a cabserivces </li>
+  <li> Airport is located outcuts to the city</li>
+  </ol>
+  <li> From airport exactely five kilometers towards to right direction then take left and go through towards north direction </li>
 </ol>
+<a href="aboutme.html">link to aboutme</a>
+
+<hr>
+<h2>Sports</h2>
+<p> i would recommend to play a cricket,football,teniss and bsketball</p>
+<table>
+    <tr>
+    <th>sports</th>
+    <th>location</th>
+    <th>cost</th>
+    </tr>
+    <tr>
+      <td>cricket</td>
+    <td>colfenhall</td>
+    <td>10$</td>
+    </tr>
+    <tr>
+      <td>footballt</td>
+      <td>ISIhall</td>
+      <td>20$</td>
+    </tr>
+    <tr>
+      <td>ternnis</td>
+    <td>ballhall</td>
+    <td>30$</td>
+    </tr>
+    <tr>
+      <td>basketball</td>
+    <td>zimcenter</td>
+    <td>100$</td>
+    </tr>
+  
+</table>
 
