--- a/bonus.html
+++ b/bonus.html
@@ -8,7 +8,7 @@
 <body>
     <h1 style="background-color:green;"><i>Nightangle</i></h1>
     <p>Sport: Football</p>
-    <p><b>Macaws</b> are a group of New World birds that are long-tailed and often colorful. They are popular in aviculture or as companion birds, although there are conservation concerns about several species in the wild.</p>
+    <p><b>Nightangle</b> are a group of New World birds that are long-tailed and often colorful. They are popular in aviculture or as companion birds, although there are conservation concerns about several species in the wild.</p>
     <ol>
         <li>The smallest nightangle are the hyacinth, Buffon's (green) and green-winged macaws.</li>
         <li>There are 35 species of nightangle, including extinct and critically endangered species.</li>
