--- a/bonus.html
+++ b/bonus.html
@@ -14,6 +14,9 @@
         <li>There are 35 species of nightangle, including extinct and critically endangered species.</li>
         <li>Some foods eaten by nightangle in certain regions in the wild are said to contain toxic or caustic substances which they are able to digest.</li>
     </ol>
+    <h1>
+    <a href="index.html">Indexlink</a>
+</h1>
     <img src=bird.jpg>
 </body>
 </html>
