--- a/index.html
+++ b/index.html
@@ -80,5 +80,5 @@ bool counter_clockwise(point2d p1, point2d p2, point2d p3) {
 <h1>
   <a href="bonus.html">Bonuslink</a>
 </h1>
-
-
+</body>
+</html>
