--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
 <hr>
 <h2>Oriented area of a triangle</h2>
+<a href="https://cp-algorithms.com/geometry/oriented-triangle-area.html">Quick link</a>
 <p>i choose a triangular algorithm for using that we can find a area of triangle.</p>
 <pre>int signed_area_parallelogram(point2d p1, point2d p2, point2d p3) {
   return cross(p2 - p1, p3 - p2);
