--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
 <h1>Food items</h1>
 <ul>i would recommend 
-  <ol>Chicken briyani</ol>
-  <ol>mutton biriyani</ol>
-  <ol>Goat biriyani</ol>
+  <li>Chicken briyani</li>
+  <li>mutton biriyani</li>
+  <li>Goat biriyani</li>
 
 
 </ul>
