--- a/index.html
+++ b/index.html
@@ -36,29 +36,29 @@
 <p> i would recommend to play a cricket,football,teniss and bsketball</p>
 <table>
     <tr>
-    <th>sports</th>
-    <th>location</th>
-    <th>cost</th>
+    <th> sports </th>
+    <th> location </th>
+    <th> cost </th>
     </tr>
     <tr>
-      <td>cricket</td>
-    <td>colfenhall</td>
-    <td>10$</td>
+      <td> cricket </td>
+    <td> colfenhall </td>
+    <td> 10$ </td>
     </tr>
     <tr>
-      <td>footballt</td>
-      <td>ISIhall</td>
-      <td>20$</td>
+      <td> football </td>
+      <td> ISIhall </td>
+      <td> 20$ </td>
     </tr>
     <tr>
-      <td>ternnis</td>
-    <td>ballhall</td>
-    <td>30$</td>
+      <td> ternnis </td>
+    <td> ballhall </td>
+    <td> 30$ </td>
     </tr>
     <tr>
-      <td>basketball</td>
-    <td>zimcenter</td>
-    <td>100$</td>
+      <td> basketball </td>
+    <td> zimcenter </td>
+    <td> 100$ </td>
     </tr>
   
 </table>
