--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 <p> i would recommend to play a cricket,football,teniss and bsketball</p>
 <table>
     <tr>
-    <th> sports </th>
-    <th> location </th>
-    <th> cost </th>
+    <th1> sports </th1>
+    <th2> location </th2>
+    <th3> cost </th3>
     </tr>
     <tr>
       <td> cricket </td>
