--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
 <h2>Sports</h2>
 <p> i would recommend to play a cricket,football,teniss and bsketball</p>
 <table>
+  <h1>
     <tr>
-    <th1> sports </th1>
-    <th2> location </th2>
-    <th3> cost </th3>
+    <th> sports </th>
+    <th> location </th>
+    <th> cost </th>
     </tr>
     <tr>
+    </h1>
       <td> cricket </td>
     <td> colfenhall </td>
     <td> 10$ </td>
