--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
 </ul>
 <a href="aboutme.html">link to aboutme</a>
 
+!DOCTYPE html>
+<html>
+<style>
+table, th, td {
+  border:1px solid black;
+}
+</style>
+<body>
+
 <hr>
 <h2>Sports</h2>
 <p> i would recommend to play a cricket,football,teniss and bsketball</p>
